Repair bug on firefox and add logo

--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,13 @@
 * {
-  -webkit-box-sizing: content-box;
-          box-sizing: content-box;
+  box-sizing: content-box;
   margin: 0;
   padding: 0;
 }
 
 #main {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   width: 100%;
-}
-
-#main #header {
-  height: 10vh;
 }
 
 #main #header #menu {
@@ -27,21 +17,16 @@
 }
 
 #main #header #menu #navbar {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   width: 100%;
   height: 100%;
   list-style: none;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
 }
 
 #main #header #menu #navbar .navbar_item {
   padding: 20px;
   margin: 10px;
-  display: -ms-grid;
   display: grid;
   place-items: center;
 }
@@ -59,7 +44,8 @@
 }
 
 #main #slider {
-  height: 40vh;
+  min-height: 400px;
+  height: 5rem;
   width: 100%;
   background: #d3cfc9da;
   position: relative;
@@ -69,12 +55,8 @@
   position: absolute;
   width: 100%;
   bottom: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
 }
 
 #main #slider #slider_pointers .slider_pointer {
@@ -91,7 +73,6 @@
   position: absolute;
   top: 25%;
   background: lightbrown;
-  display: -ms-grid;
   display: grid;
   place-items: center;
   left: 3%;
@@ -108,7 +89,6 @@
   position: absolute;
   top: 25%;
   background: lightbrown;
-  display: -ms-grid;
   display: grid;
   place-items: center;
   right: 3%;
@@ -130,4 +110,3 @@
 #main #footer {
   height: 10vh;
 }
-/*# sourceMappingURL=style.css.map */
